feat: added waiting for timeout functionality
